--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.18.6",
+    "classnames": "^2.3.1",
     "eslint-webpack-plugin": "^3.2.0",
     "immutable": "^4.1.0",
     "react": "^18.2.0",
